sprint 15: реализован функционал тз